Fix for wrapping on form labels on large screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -229,8 +229,8 @@ td {
 }
 
 .left-cell-label {
-  min-width: 50%;
-  max-width: 220px;
+  min-width: fit-content;
+  max-width: 250px;
 }
 
 .required-asterisk {
